# gipsy

./: Makefile.am  README.md  common.mk  configure.ac  makelinks.sh  tasks.mk
64bit/: create_big.col  create_small.col  image_info.py
dat/: dat.dir
dat/lut/: bw.lut  kester.lut  light.lut  rainbow5.lut
doc/: archreset.doc  atqueue.doc  bookkeeper.doc  categories.doc  check.doc  clients.doc  compile.doc  contents.doc  cshrc.doc  depend.doc  documentation.doc  ellint.doc  ellint.tex  export.doc  f2c.doc  f2cvv.doc  findx.doc  fixcps.doc  gdsserver.doc  getarch.doc  getfile.doc  gftp.doc  ggi.doc  ggihelp.doc  ggivtk.doc  gids.doc  gipenv.doc  gipsy.doc  gopher.doc  grdevices.doc  help.doc  hermes.tex  history.doc  htmldoc.doc  input.doc  inspector.tex  install.doc  ioutils.py.doc  kapteynpackage.doc  keyhelp.doc  (+36 more)
inc/: Rheostat.h  Slider2.h  TextField.h  aborttask.h  addpgdrv.h  allpar.h  angle.h  anyout.h  arith.h  arithc.h  assert.h  axcoord.h  axprops.h  axtype.h  axunit.h  beam.h  canall.h  cancel.h  cfts_io.h  cfts_skippix.h  cftsd_geth.h  cftsi_getc.h  cftsi_geti.h  cftsi_getr.h  chrint.h  clipper.h  clspfp.h  cmain.h  cnvrtc.h  cnvrtd.h  cnvrte.h  cnvrtf.h  cnvrth.h  convolve.h  convpars.h  copyhead_item.h  copyhead_level.h  cotrans.h  cpldrv.h  cppdrv.h  (+638 more)
sub/: Makefile.am  angle.c  anyoutf.c  arith.c  arithc.c  axprops.c  axtype.c  beam.c  bessel.c  bind_hermes.c  cfts_io.c  chrint.c  clipper.c  cnvrt.c  convolve.c  convpars.shl  copyhead.c  cotrans.c  cubicspline.c  dcdset.c  diskinfo.c  dms.c  drawaxis.c  dydx.src  ecdset.c  eclipco.c  ellipse.c  ellipsefill.c  enterc.c  errorf.c  eventmonitor.c  events.src  f2cvv_aux.src  factor.c  fextend.c  fie.c  filestat.c  fillgauss2d.c  fitgauss2d.c  flist.c  (+178 more)
sys/: archreset.csh  archreset.sh  atqueue.csh  check.csh  check.sh  cshrc.csh  export.csh  f2c.csh  findx.sh  getarch.csh  getfile.csh  gipenv.csh  gipenv.sh  gipsy.csh  gipsy.sh  gipsy_install.csh  grdevices.template  install.csh  legacy-setup.mgr  listdiffs.csh  lock.csh  lpdevices.template  manager.mgr  mkbookkeeper.csh  mkclient.csh  mtdevices.template  ngipsy.csh  offspring  options.mgr  pack.csh  pgpack.f  pmail.csh  programmers.mgr  register.sh  rmtserver.csh  server.mgr  setup.mgr  shadowtree.csh  sysgen.csh  tvdevices.template  (+2 more)
tsk/: 3dplot.c  Makefile.am  aid.shl  allskyplot.src  antpat.src  aosnip.c  astrom.c  axswap.c  blot.c  calc.c  cblank.shl  clean.c  clip.c  coder.c  cola.c  colour.c  combin.shl  compile.c  condit.c  conrem.c  conremcheb.src  coords.c  copy.shl  cormap.c  cplot.c  create.shl  cursor.c  decim.c  delete.c  disk.c  dssload.c  editset.c  ellfit.c  ellint.c  ellprof.c  enhance.c  extend.c  extract-qrc.src  f2cvv.c  fft.c  (+140 more)
tsk/gdsserver/: Makefile.am  Makefile.in
tsk/gdsserver64/: Makefile.am
tsk/hermes/: Makefile.am  Makefile.in
